Working on converting the boss to having uniform frame sizes, because some of the off-size frames really screw with the rotated poses.

--- a/data/objects/enemies/bosses/mushroom_boss.cfg
+++ b/data/objects/enemies/bosses/mushroom_boss.cfg
@@ -111,6 +111,7 @@ properties: {
 	},
 		
 	on_end_normal_anim:  "[set(facing,facing),animation('normal')]",
+	on_end_spit_anim: "animation('spit')",
 	on_end_attack_homing_anim:  "begin_idle",
 	on_end_attack_stream_anim:  "animation('attack_stream')",
 	on_process_attack_stream: "if(level.cycle%10=0,spawn(type+'.stream_shot',mid_x,mid_y - 150,1,[set(child.velocity_y, -500 - 1d1000),set(child.velocity_x,1d500-250)]))",
@@ -186,6 +187,7 @@ properties: {
 		{
 			"@base": true,
 			image: "enemies/mushroom-boss1.png",
+			no_remove_alpha_borders: true,
 			palettes: "@include data/palettes.cfg:forest_palettes",
 			feet_x: 80,
 			attack_area: [0,60,159,159],
@@ -214,7 +216,6 @@ properties: {
 			image: "enemies/mushroom-boss3.png",
 			rect: [0,0,159,175],
 			frames:4,
-			frames_per_row:2,
 			reverse: true,
 			duration: 3,
 			feet_y: 176,
@@ -226,7 +227,6 @@ properties: {
 			image: "enemies/mushroom-boss3.png",
 			rect: [0,0,159,175],
 			frames:4,
-			frames_per_row:2,
 			reverse: true,
 			duration: 3,
 			feet_y: 176,
@@ -238,7 +238,6 @@ properties: {
 			image: "enemies/mushroom-boss3.png",
 			rect: [0,0,159,175],
 			frames:4,
-			frames_per_row:2,
 			reverse: true,
 			duration: 3,
 			feet_y: 176,
@@ -247,9 +246,9 @@ properties: {
 		{
 			id: "spit",
 			image: "enemies/mushroom-boss3.png",
+			no_remove_alpha_borders: true,
 			rect: [0,0,159,175],
 			frames:4,
-			frames_per_row:2,
 			reverse: true,
 			duration: 3,
 			feet_y: 176,
@@ -258,30 +257,28 @@ properties: {
 		{
 			id: "enter_guard",
 			image: "enemies/mushroom-boss4.png",
-			rect: [0,0,159,159],
+			rect: [0,0,159,175],
 			frames:4,
-			frames_per_row: 2,
 			duration: 6,
-			feet_y: 160,
+			feet_y: 176,
 		},
 		{
 			id: "exit_guard",
 			image: "enemies/mushroom-boss4.png",
-			rect: [0,0,159,159],
+			rect: [0,0,159,175],
 			frames:4,
-			frames_per_row: 2,
 			play_backwards: true,
 			duration: 6,
-			feet_y: 160,
+			feet_y: 176,
 		},
 		{
 			id: "guard",
 			image: "enemies/mushroom-boss4.png",
-			rect: [160,160,319,319],
+			rect: [480,0,639,175],
 			frames:1,
 			play_backwards: true,
 			duration: 20,
-			feet_y: 160,
+			feet_y: 176,
 		},
 		{
 			id: "sprout",
@@ -289,17 +286,16 @@ properties: {
 			rect: [0,0,159,159],
 			frames:1,
 			duration: 100000,
-			feet_y: 160,
+			feet_y: 176,
 		},
 		{
 			id: "exit_sprout",
 			image: "enemies/mushroom-boss4.png",
-			rect: [0,0,159,159],
+			rect: [0,0,159,175],
 			frames:4,
-			frames_per_row: 2,
 			play_backwards: true,
 			duration: 20,
-			feet_y: 160,
+			feet_y: 176,
 		},
 	],
 
@@ -404,7 +400,7 @@ properties: {
 			{
 				x: lib.math.round(head.mid_x + cos(angle) * distance),
 				y: lib.math.round(head.mid_y + sin(angle) * distance)
-			} where distance = 190
+			} where distance = 180
 			  where angle = head.rotate - 90",
 
 		#-------------------------- selectors for the heads/stalks --------------------------#
@@ -494,7 +490,7 @@ properties: {
 									]",
 													
 	pick_random_behavior: "commands :: [
- 											switch(0, //_behavior_mode_prng.get_next_value,
+ 											switch(2, //_behavior_mode_prng.get_next_value,
  												0, ;	begin_spawn_acid_rain_glob,
  												1, ;	begin_spore_cloud_setup,
  												2, ;	begin_horizontal_sweeper_attack,
@@ -570,9 +566,10 @@ properties: {
 			set(_current_phase_random_timer, size(seeker_heights) * 50 + 100 ),
 		]",
 		
-		process_horizontal_sweeper_attack: "commands :: 
-			map(seeker_heights, conditional_sweeper_spawn(index, value))
-		",
+		process_horizontal_sweeper_attack: "commands :: [
+			map(seeker_heights, conditional_sweeper_spawn(index, value)),
+			do_after_phase_timer( pick_random_behavior ),
+		]",
 		
 		conditional_sweeper_spawn: "def(int spawn_index, int spawn_height) -> commands [
 			if(cycle - _phase_started_at = 50 * (spawn_index + 1),
@@ -599,6 +596,18 @@ properties: {
 					)
 				])
 			),
+			
+			if(cycle - _phase_started_at = 50 * (spawn_index + 1), [
+				set(upper_left_stalk.animation, 'spit'),
+				set(upper_right_stalk.animation, 'spit'),
+			]),
+
+			if(cycle - _phase_started_at = 50 * (spawn_index + 1) + 15, [
+				set(upper_left_stalk.animation, 'guard'),
+				set(upper_right_stalk.animation, 'guard'),
+			]),
+			
+			
 		]",			
 		
 #-------------------------- spore-cloud attack --------------------------#
