--- a/data/objects/enemies/bosses/mushroom_boss.cfg
+++ b/data/objects/enemies/bosses/mushroom_boss.cfg
@@ -51,6 +51,35 @@ properties: {
 		taste: "~Of dust and death and mycological chemicals!~",
 
 
+	#-------------------------- cosmetic logic --------------------------#
+		do_custom_graphical_wobble: "commands :: (
+			(([set(custom_draw,
+			[0.0,1.0,
+			1.2,1.4,1.5,1.7,
+			2.0,3.0,
+			3.3,3.5,3.6,3.8,
+			[upper_left[0]*scl(0.7),upper_left[1]*scl(0.7)],[upper_right[0]*scl(0.7),upper_right[1]*scl(0.7)],
+			[upper_right[0]*scl(1.1),upper_right[1]], [upper_right[0]*scl(0.4),upper_right[1]], [upper_right[0]*scl(0.1),upper_right[1]],still,
+			still,still,
+			still,[upper_left[0]*scl(0.1),upper_left[1]], [upper_left[0]*scl(0.4),upper_left[1]], [upper_left[0]*scl(1.1),upper_left[1]],
+			])]
+		
+			) where scl = def(decimal factor) sin(factor*90)
+			where upper_left = [offset_x,offset_y]
+			where upper_right = [offset_x,offset_y2]
+			where still = [0,0]
+		
+			)
+		
+			where offset_x = ((sin(cycle*5)*150)*0.06) * dampen
+			where offset_y = ((sin(    cycle*3)*80)*0.04 + y_bob) * dampen
+			where offset_y2 = -((sin(40+ cycle*3)*80)*0.04 + y_bob) * dampen
+		
+			) where y_bob = sin(cycle*10)*5 * dampen * dampen
+			where dampen =  if(animation = 'guard', 0.5, 1.0)
+		",
+
+
 	#--------------------------  special logic that lets the controller handle getting hit --------------------------#
 		
 		get_hit_by: "def(obj hittable collide_with) -> commands [
@@ -75,113 +104,54 @@ properties: {
 		set_draw_size: "def(decimal _scale) -> commands set(custom_draw, [0.0,1.0,2.0,3.0, [160-160*_scale,320-320*_scale],[-160+160*_scale,320-320*_scale],[-160+160*_scale,0],[160-160*_scale,0]])",
 
 
-	#--------------------------  custom combat logic --------------------------#
+	#--------------------------  custom animation logic --------------------------#
 
-		max_shots: "if(higher_difficulty, 3, 1)",
-		should_shoot_homing_shot: "(size(filter(level.chars, value.type = 'mushroom_boss.big_shot')) <= max_shots)",
 
-		max_babies: "if(higher_difficulty, 8, 4)",
-		should_spawn_baby_mushroom: "(size(filter(level.chars, value.type = 'mushroom_jellyfish')) <= max_babies)",
 
-		begin_chargeup: "execute(me, animation('chargeup') )",
-		begin_idle: "execute(me, [animation('normal')])",
-		begin_attack_homing: "execute(me, [if(should_shoot_homing_shot,animation('attack_homing'),begin_idle)])",
-		begin_attack_spawn: "execute(me, [if(should_spawn_baby_mushroom,animation('attack_spawn'),begin_idle)])",
-		begin_attack_stream: "execute(me, animation('attack_stream'))",
 		begin_guard: "execute(me, [animation('enter_guard'),set(_guard_counter,3)])",
 
 
 
-		set_behavior: "def(string choice) -> commands execute(me, [switch(choice,
-						'chargeup', begin_chargeup,
-						'attack_spawn', [begin_idle, schedule(1d100,begin_attack_spawn)],
-						'attack_homing', [begin_idle, schedule(1d100,begin_attack_homing)],
-						'attack_stream', [begin_idle, schedule(1d100,begin_attack_stream)],
-						'guard', begin_guard,
-			), set(me.behavior, choice)])",
+
 		
 
 		
 
 
 	#--------------------------  vars --------------------------#
-		behavior: { type: "string", default: "", persistent: false },
 		_sprouted: { type: "bool", default: false, persistent: false },
 		_guard_counter: { type: "int", default: 3, persistent: false },
-	},
+},
+
+
+
+
+	#--------------------------  animation controls --------------------------#
 		
 	on_end_normal_anim:  "[set(facing,facing),animation('normal')]",
+	
 	on_end_spit_anim: "animation('spit')",
-	on_end_attack_homing_anim:  "begin_idle",
-	on_end_attack_stream_anim:  "animation('attack_stream')",
-	on_process_attack_stream: "if(level.cycle%10=0,spawn(type+'.stream_shot',mid_x,mid_y - 150,1,[set(child.velocity_y, -500 - 1d1000),set(child.velocity_x,1d500-250)]))",
-
-	on_end_chargeup_anim:  "[animation('chargeup')]",
+	on_end_chargeup_anim:  "animation('chargeup')",
+	
 	on_end_guard_anim:		"if(_guard_counter <= 0, animation('exit_guard'), [animation('guard'),add(_guard_counter,-1)])",
 	on_end_enter_guard_anim: "animation('guard')",
 	on_end_exit_guard_anim: "animation('normal')",
+	
 	on_end_sprout_anim: "null",
 	on_end_exit_sprout_anim: "animation('normal')",
 
-	on_shoot: "[
-		sound_falloff('mushroom-boss-shot'+1d2+'.wav',500),
-		sound_falloff('mushroom-boss-spore-shot'+1d3+'.wav'),
-		sound_falloff('squishy-shot'+1d5+'.wav'),
-		spawn(type+'.big_shot', mid_x, y, 1, set(child.velocity_y, -500 - 1d400)),
+
+
+
+	on_sprout: "[
+		set(alpha,255),
+		map(range(150),schedule(value, set_draw_size((1.0/150.0)*value))),
+		schedule(50, set(animation,'exit_sprout')),
+		schedule(150, set(_sprouted,true)),
 	]",
 
-	on_spawn_baby: "[
-			sound('Jellyfish-Spawn'+1d2+'.wav'),
-			add_object(obj),
-			set(obj.velocity_y, 1500*up),
 
-			] where obj = object('mushroom_jellyfish', mid_x, mid_y+(180*upside_down), 
-			{
-				_init_x: me.mid_x + 1d400-200, 
-				_init_y: me.mid_y - 300,
-				_desired_height: me.mid_y - 300,
-				_x_bound: level_x,
-				_x2_bound: level_x + level_w,
-				_dive_height: if(upside_down = 1, me.mid_y + 500,me.mid_y + 100),
-				_behavior: 'climb'
-			})
-				where level_x = level.dimensions[0]
-				where level_y = level.dimensions[1]
-				where level_w = level.dimensions[2]
-				where level_h = level.dimensions[3]
-		
-			", 
-
-
-	on_sprout: "[set(alpha,255),map(range(150),schedule(value, set_draw_size((1.0/150.0)*value))),schedule(50,set(animation,'exit_sprout')),schedule(150,set(_sprouted,true))]",
-
-
-	on_process: "if(_sprouted, ((([set(custom_draw,
-			[0.0,1.0,
-			1.2,1.4,1.5,1.7,
-			2.0,3.0,
-			3.3,3.5,3.6,3.8,
-			[upper_left[0]*scl(0.7),upper_left[1]*scl(0.7)],[upper_right[0]*scl(0.7),upper_right[1]*scl(0.7)],
-			[upper_right[0]*scl(1.1),upper_right[1]], [upper_right[0]*scl(0.4),upper_right[1]], [upper_right[0]*scl(0.1),upper_right[1]],still,
-			still,still,
-			still,[upper_left[0]*scl(0.1),upper_left[1]], [upper_left[0]*scl(0.4),upper_left[1]], [upper_left[0]*scl(1.1),upper_left[1]],
-			])]
-		
-			) where scl = def(decimal factor) sin(factor*90)
-			where upper_left = [offset_x,offset_y]
-			where upper_right = [offset_x,offset_y2]
-			where still = [0,0]
-		
-			)
-		
-			where offset_x = ((sin(cycle*5)*150)*0.06) * dampen
-			where offset_y = ((sin(    cycle*3)*80)*0.04 + y_bob) * dampen
-			where offset_y2 = -((sin(40+ cycle*3)*80)*0.04 + y_bob) * dampen
-		
-			) where y_bob = sin(cycle*10)*5 * dampen * dampen
-			where dampen =  if(animation = 'guard', 0.5, 1.0)
-		
-			) ",
+	on_process: "if(_sprouted, do_custom_graphical_wobble)",
 
 	animation: [
 		{
@@ -201,6 +171,8 @@ properties: {
 			duration: 3,
 			feet_y: 176,
 		},
+		
+		
 		{
 			id: "chargeup",
 			image: "enemies/mushroom-boss2.png",
@@ -211,38 +183,8 @@ properties: {
 			feet_y: 176,
 			attack_area: [0,76,159,176],
 		},
-		{
-			id: "attack_homing",
-			image: "enemies/mushroom-boss3.png",
-			rect: [0,0,159,175],
-			frames:4,
-			reverse: true,
-			duration: 3,
-			feet_y: 176,
-			events: "6:shoot",
-			attack_area: [0,76,159,176],
-		},
-		{
-			id: "attack_spawn",
-			image: "enemies/mushroom-boss3.png",
-			rect: [0,0,159,175],
-			frames:4,
-			reverse: true,
-			duration: 3,
-			feet_y: 176,
-			events: "6:spawn_baby",
-			attack_area: [0,76,159,176],
-		},
-		{
-			id: "attack_stream",
-			image: "enemies/mushroom-boss3.png",
-			rect: [0,0,159,175],
-			frames:4,
-			reverse: true,
-			duration: 3,
-			feet_y: 176,
-			attack_area: [0,76,159,176],
-		},
+
+
 		{
 			id: "spit",
 			image: "enemies/mushroom-boss3.png",
@@ -253,6 +195,8 @@ properties: {
 			feet_y: 176,
 			attack_area: [0,76,159,176],
 		},
+		
+		
 		{
 			id: "enter_guard",
 			image: "enemies/mushroom-boss4.png",
@@ -279,6 +223,8 @@ properties: {
 			duration: 20,
 			feet_y: 176,
 		},
+		
+		
 		{
 			id: "sprout",
 			image: "enemies/mushroom-boss5.png",
@@ -399,7 +345,7 @@ properties: {
 			{
 				x: lib.math.round(head.mid_x + cos(angle) * distance),
 				y: lib.math.round(head.mid_y + sin(angle) * distance)
-			} where distance = 180
+			} where distance = 150
 			  where angle = head.rotate - 90",
 
 		#-------------------------- selectors for the heads/stalks --------------------------#
@@ -532,7 +478,7 @@ properties: {
 			debug_head_choice(_chosen_head),
 			set(_current_phase_random_timer, 800 + 1d200 ),
 			
-			_chosen_head.set_behavior('guard'),
+			_chosen_head.begin_guard,
 		]",
 	
 		process_spawn_acid_rain_glob: "commands :: [
@@ -601,9 +547,9 @@ properties: {
 				set(upper_right_stalk.animation, 'spit'),
 			]),
 
-			if(cycle - _phase_started_at = 50 * (spawn_index + 1) + 15, [
-				set(upper_left_stalk.animation, 'guard'),
-				set(upper_right_stalk.animation, 'guard'),
+			if(cycle - _phase_started_at = 50 * (spawn_index + 1) + 12, [
+				upper_left_stalk.begin_guard,
+				upper_right_stalk.begin_guard,
 			]),
 			
 			
