Changed the guard anim to have a frame-based counter rather than counting iterations of the full guard animation before ending.

--- a/data/objects/enemies/bosses/mushroom_boss.cfg
+++ b/data/objects/enemies/bosses/mushroom_boss.cfg
@@ -108,7 +108,10 @@ properties: {
 
 
 
-		begin_guard: "execute(me, [animation('enter_guard'),set(_guard_counter,3)])",
+		begin_guard: "def(int duration) -> commands execute(me, [
+			animation('enter_guard'),
+			set(_guard_counter, duration),
+		])",
 
 
 
@@ -133,7 +136,10 @@ properties: {
 	on_end_spit_anim: "animation('spit')",
 	on_end_chargeup_anim:  "animation('chargeup')",
 	
-	on_end_guard_anim:		"if(_guard_counter <= 0, animation('exit_guard'), [animation('guard'),add(_guard_counter,-1)])",
+	on_process_guard:	"if(dump(_guard_counter) <= 0,
+		animation('exit_guard'),
+		add(_guard_counter,-1)
+	)",
 	on_end_enter_guard_anim: "animation('guard')",
 	on_end_exit_guard_anim: "animation('normal')",
 	
@@ -220,7 +226,7 @@ properties: {
 			rect: [480,0,639,175],
 			frames:1,
 			play_backwards: true,
-			duration: 20,
+			duration: -1,
 			feet_y: 176,
 		},
 		
@@ -478,13 +484,15 @@ properties: {
 			debug_head_choice(_chosen_head),
 			set(_current_phase_random_timer, 800 + 1d200 ),
 			
-			_chosen_head.begin_guard,
 		]",
 	
 		process_spawn_acid_rain_glob: "commands :: [
 			if(cycle - _phase_started_at = 50, [
 				spawn('mushroom_boss.acid_dropper_big_shot', spout_position(_chosen_head).x, spout_position(_chosen_head).y, {lifetime: _current_phase_random_timer}),
 				set(_chosen_head.animation, 'spit'),
+			]),
+			if(cycle - _phase_started_at = 60, [
+				set(_chosen_head.animation, 'normal'),
 			]),
 			do_after_phase_timer( pick_random_behavior )
 		]",
@@ -548,8 +556,8 @@ properties: {
 			]),
 
 			if(cycle - _phase_started_at = 50 * (spawn_index + 1) + 12, [
-				upper_left_stalk.begin_guard,
-				upper_right_stalk.begin_guard,
+				upper_left_stalk.begin_guard(4),
+				upper_right_stalk.begin_guard(4),
 			]),
 			
 			
