Some further tweaks to the mushroom boss spawning the sweep attack.

--- a/data/objects/enemies/bosses/mushroom_boss.cfg
+++ b/data/objects/enemies/bosses/mushroom_boss.cfg
@@ -136,7 +136,7 @@ properties: {
 	on_end_spit_anim: "animation('spit')",
 	on_end_chargeup_anim:  "animation('chargeup')",
 	
-	on_process_guard:	"if(dump(_guard_counter) <= 0,
+	on_process_guard:	"if(_guard_counter <= 0,
 		animation('exit_guard'),
 		add(_guard_counter,-1)
 	)",
@@ -323,7 +323,7 @@ properties: {
 			hurt_velocity_x: 0,
 
 		#-------------------------- helpers --------------------------#
-			mb_debug_active: "bool :: true",
+			mb_debug_active: "bool :: false",
 			mb_clear: "commands :: null", //"if(mb_debug_active, clear())",
 			mb_debug: "def(value) -> commands if(mb_debug_active, debug(value))",
 
@@ -526,29 +526,37 @@ properties: {
 		
 		conditional_sweeper_spawn: "def(int spawn_index, int spawn_height) -> commands [
 			if(cycle - _phase_started_at = 50 * (spawn_index + 1),
-				spawn('mushroom_boss.sweeper_projectile', spout_position(upper_right_stalk).x, spout_position(upper_right_stalk).y, facing, [
-					child.fly_to([
+				spawn('mushroom_boss.sweeper_projectile', spout_position(upper_right_stalk).x, spout_position(upper_right_stalk).y, {
+					velocity_x: shot_info.x,
+					velocity_y: shot_info.y,
+					rotate: shot_info.angle
+				}, [
+					schedule(20, child.fly_to([
 							{x: spout_position(upper_right_stalk).x, y: spawn_height},
 						], def() child.fly_to([
 							{x: spout_position(upper_left_stalk).x, y: spawn_height}
 						], def() child.force_death() 
 						)
-					)
+					))
 				])
-			),
+			) where shot_info = compute_shot_velocity(upper_right_stalk),
 			
 			/* To keep the code comprehensible, we're doing a copy-paste to make the one that goes the other horizontal direction */
 			if(cycle - _phase_started_at = 50 * (spawn_index + 1),
-				spawn('mushroom_boss.sweeper_projectile', spout_position(upper_left_stalk).x, spout_position(upper_left_stalk).y, facing, [
-					child.fly_to([
+				spawn('mushroom_boss.sweeper_projectile', spout_position(upper_left_stalk).x, spout_position(upper_left_stalk).y, {
+					velocity_x: shot_info.x,
+					velocity_y: shot_info.y,
+					rotate: shot_info.angle
+				}, [
+					schedule(20, child.fly_to([
 							{x: spout_position(upper_left_stalk).x, y: spawn_height},
 						], def() child.fly_to([
 							{x: spout_position(upper_right_stalk).x, y: spawn_height}
 						], def() child.force_death() 
 						)
-					)
+					))
 				])
-			),
+			) where shot_info = compute_shot_velocity(upper_left_stalk),
 			
 			if(cycle - _phase_started_at = 50 * (spawn_index + 1), [
 				set(upper_left_stalk.animation, 'spit'),
@@ -561,7 +569,27 @@ properties: {
 			]),
 			
 			
-		]",			
+		]",
+	
+		compute_shot_velocity: "def(obj mushroom_boss head) -> {
+			x: decimal,
+			y: decimal,
+			angle: decimal,
+		}
+		{
+			x: shot_velocity.x,
+			y: shot_velocity.y + 100,
+			angle: shot_angle
+		}	
+
+			where shot_velocity = { x: decimal, y: decimal } :: { x: shot_speed * cos(shot_angle), y: shot_speed * sin(shot_angle)}
+
+			where shot_speed = (200 + 1d50)
+			where shot_angle =	(head.rotate - 90) + /* first adjust for coordinate system */
+								(30 - 1d60) /* then apply a random factor so it's a spread shot */ 
+		",
+
+	
 		
 #-------------------------- spore-cloud attack --------------------------#
 	/*
@@ -676,6 +704,7 @@ properties: {
 		prototype: ["seeker_flying"],
 		always_active: true,
 		solid_area: null,
+		collide_dimensions: ["~player","~enemy","~hazard","~obstruction"],
 
 		properties: {
 			acquirable_item_drop_value: "int :: 0",
