Did a bunch more graphical refinements to the sweeper attack.

--- a/data/objects/enemies/bosses/mushroom_boss.cfg
+++ b/data/objects/enemies/bosses/mushroom_boss.cfg
@@ -538,8 +538,8 @@ properties: {
 						], def() child.force_death() 
 						)
 					))
-				])
-			) where shot_info = compute_shot_velocity(upper_right_stalk),
+				]) where shot_info = compute_shot_velocity(upper_right_stalk)
+			),
 			
 			/* To keep the code comprehensible, we're doing a copy-paste to make the one that goes the other horizontal direction */
 			if(cycle - _phase_started_at = 50 * (spawn_index + 1),
@@ -555,8 +555,8 @@ properties: {
 						], def() child.force_death() 
 						)
 					))
-				])
-			) where shot_info = compute_shot_velocity(upper_left_stalk),
+				]) where shot_info = compute_shot_velocity(upper_left_stalk)
+			),
 			
 			if(cycle - _phase_started_at = 50 * (spawn_index + 1), [
 				set(upper_left_stalk.animation, 'spit'),
@@ -578,15 +578,15 @@ properties: {
 		}
 		{
 			x: shot_velocity.x,
-			y: shot_velocity.y + 100,
+			y: shot_velocity.y,
 			angle: shot_angle
 		}	
 
 			where shot_velocity = { x: decimal, y: decimal } :: { x: shot_speed * cos(shot_angle), y: shot_speed * sin(shot_angle)}
 
-			where shot_speed = (200 + 1d50)
+			where shot_speed = (100 + 1d50)
 			where shot_angle =	(head.rotate - 90) + /* first adjust for coordinate system */
-								(30 - 1d60) /* then apply a random factor so it's a spread shot */ 
+								(15 - 1d30) /* then apply a random factor so it's a spread shot */ 
 		",
 
 	
@@ -704,7 +704,10 @@ properties: {
 		prototype: ["seeker_flying"],
 		always_active: true,
 		solid_area: null,
+//		traction_in_air: 1000,
+		friction: 0000,
 		collide_dimensions: ["~player","~enemy","~hazard","~obstruction"],
+		zorder: "@include data/zorder.cfg:in_front_of_parallax_objects",
 
 		properties: {
 			acquirable_item_drop_value: "int :: 0",
@@ -715,6 +718,8 @@ properties: {
 			]",
 
 			#-------------------------- core processing --------------------------#
+			process_fly: "commands :: if((_target_pos = null) and (not me.cycle < 20), process_fly_internal)",
+
 			handle_specialized_creature_category_processing: "commands :: [
 
 					set(rotate, sin(cycle*7) * 4.0)
@@ -722,6 +727,7 @@ properties: {
 		},
 
 		on_create: "[
+			spawn('explosion_acid_big', mid_x, mid_y, 1),
 			spawn('legacy_particle_attache', mid_x, mid_y, {
 				_particle_type: 'acid_shot_contrail',
 				parent: me,
