Wired in the boss's body to play the right animation during the spore cloud attack.

--- a/data/objects/enemies/bosses/mushroom_boss.cfg
+++ b/data/objects/enemies/bosses/mushroom_boss.cfg
@@ -96,7 +96,7 @@ properties: {
 		
 		Originally the boss was designed with this idea that in certain attack modes, it would "shield up" and avoid taking damage, but the whole idea is being scrapped.  It's saved here for posterity.
 		
-		is_invincible: "bool :: ((not me.animation = 'chargeup') or proto_conds) where proto_conds = (bool(invincible) or level.in_dialog or is_invincible_posthit)",
+		is_invincible: "bool :: ((not me.animation = 'spray') or proto_conds) where proto_conds = (bool(invincible) or level.in_dialog or is_invincible_posthit)",
 */
 
 		play_object_specific_pain_vocalization: "def(DamageType damage_type, damage_amount) -> commands if(damage_amount > 0, sound('mushroom-boss-hurt.wav'), sound('mushroom-boss-resist.wav'))",
@@ -134,7 +134,7 @@ properties: {
 	on_end_normal_anim:  "[set(facing,facing),animation('normal')]",
 	
 	on_end_spit_anim: "animation('spit')",
-	on_end_chargeup_anim:  "animation('chargeup')",
+	on_end_spray_anim:  "animation('spray')",
 	
 	on_process_guard:	"if(_guard_counter <= 0,
 		animation('exit_guard'),
@@ -180,7 +180,7 @@ properties: {
 		
 		
 		{
-			id: "chargeup",
+			id: "spray",
 			image: "enemies/mushroom-boss2.png",
 			rect: [0,0,159,175],
 			frames:5,
@@ -441,7 +441,7 @@ properties: {
 									]",
 													
 	pick_random_behavior: "commands :: [
- 											switch(2, //_behavior_mode_prng.get_next_value,
+ 											switch(_behavior_mode_prng.get_next_value,
  												0, ;	begin_spawn_acid_rain_glob,
  												1, ;	begin_spore_cloud_setup,
  												2, ;	begin_horizontal_sweeper_attack,
@@ -620,8 +620,8 @@ properties: {
 		begin_spore_cloud: "commands :: [
 			mb_debug('MODE: begin_spore_cloud'), 
 			set(_state, enum spore_cloud_emit),
+			set(_chosen_head.animation, 'spray'),
 			;
-
 
 			set(_current_phase_random_timer, 500 + 1d75)
 		]",
@@ -631,7 +631,10 @@ properties: {
 			if(level.cycle % 5 = 0,
 				do_spore_shot
 			),
-			do_after_phase_timer( pick_random_behavior ),
+			do_after_phase_timer([
+				pick_random_behavior,
+				set(_chosen_head.animation, 'normal'),
+			]),
 		]",
 		
 		
@@ -769,7 +772,7 @@ properties: {
 			spawn('mushroom_boss.stream_shot_particles', mid_x, mid_y, {facing: facing, parent: me, relative_x: 0, relative_y: 0, time_to_die: 30, initial_spawn_rate: 250 }),
 			set(facing, if(1d2=2,1,-1)),
 			set(rotate, 1d360),
-			spawn('mushroom_boss.big_shot_impact',mid_x,mid_y,facing)
+			spawn('mushroom_boss.big_shot_impact',mid_x,mid_y, {rotate: rotate + 90, zorder: zorder})
 		]",
 		on_process: "set(velocity_xy, [velocity_xy.x * 0.99, velocity_xy.y * 0.99]) ",
 		on_end_anim: "[animation('normal'),set(rotate, 1d360)]",
@@ -797,6 +800,7 @@ properties: {
 	{
 		id: "stream_shot_particles",
 		prototype: ["effects_attache"],
+		zorder: "@include data/zorder.cfg:in_front_of_parallax_objects",
 
 		properties: {
 			initial_spawn_rate: { type: "int", dynamic_initialization: true },
