Plugged a hole causing the mushroom boss's 'stalks' variable to throw an assert.

--- a/data/objects/enemies/bosses/mushroom_boss.cfg
+++ b/data/objects/enemies/bosses/mushroom_boss.cfg
@@ -299,8 +299,9 @@ properties: {
 		properties: {
 		#-------------------------- constructor/destructor logic --------------------------#
 			epihittable_obj_constructor: "commands :: [
-				if(level.player.get_stored_event('mushroom_boss_fight_won'), remove_object(me)), 
+				if(level.player.get_stored_event('mushroom_boss_fight_won'), remove_object(me)),
 				set_max_hitpoints({casual: standard_thrown_damage * 3 * 10, challenging: standard_thrown_damage * 3 * 15}),
+				schedule(1, bind_command(def() set(stalks, stalks_uncached) )),
 			]",
 
 
@@ -355,7 +356,8 @@ properties: {
 			  where angle = head.rotate - 90",
 
 		#-------------------------- selectors for the heads/stalks --------------------------#
-			stalks: "[obj mushroom_boss] <- filter(level.chars, value.type = 'mushroom_boss')",
+			stalks_uncached: "[obj mushroom_boss] <- filter(level.chars, value.type = 'mushroom_boss')",
+			stalks: { type: "[obj mushroom_boss]", init: "[]" },
 
 			/* 
 				As much as it might be 'elegant' to program the boss in a way that gracefully adapts to a fully arbitrary number of boss heads, it's kind of a pointless endeavor.  We're softly going to expect that there are 4 heads, and leave open the potential of things breaking if we change it later.  Some of these pieces of code will break down if i.e. there are less than two stalks.
